--- a/gradle.properties
+++ b/gradle.properties
@@ -5,3 +5,8 @@ android.useAndroidX=true
 
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+
+org.gradle.jvmargs=-Xmx1536m
